user-signup-added

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -15,7 +15,7 @@
             <div id="sub-container">
                 <h1 class="fs-3">Login</h1>
                 <p id="err" style="color: #f45034; text-align: center;">
-                    
+                    <%= message %>
                 </p>
                 <form onsubmit="return handleSubmit();" action="/login" method="post">
                     <div class="c-info">
