--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -1,69 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <%- include('./partials/header'); %>
-    <title>Signup</title>
-  </head>
+        <title>Signup</title>
+</head>
 
-  <body>
+<body>
     <div>
-      <div class="form-container">
-        <div id="sub-container">
-          <h1 class="fs-3">SignUp</h1>
-          <form
-            onsubmit="return handleSubmit();"
-            action="/signup"
-            method="post"
-          >
-            <span
-              id="err"
-              style="color: #d13434; text-align: center; display: block"
-            ></span>
-            <div class="c-info">
-              <label class="required" for="username">Username</label>
-              <input
-                type="text"
-                name="username"
-                id="username"
-                placeholder="Email"
-                oninput="this.className='' "
-                autocomplete="off"
-              />
-            </div>
-            <div class="c-info">
-              <label class="required" for="password">Password</label>
-              <input
-                type="password"
-                name="password"
-                id="password"
-                placeholder="password"
-                oninput="this.className='' "
-                autocomplete="off"
-              />
-            </div>
+        <div class="form-container">
+            <div id="sub-container">
+                <h1 class="fs-3">SignUp</h1>
+                <form onsubmit="return handleSubmit();" action="/signup" method="post">
+                    <p style="color: #04AA6D; text-align: center;">
+                        <%= message %>
+                    </p>
+                    <span id="err" style="color: #d13434; text-align: center; display: block;"></span>
+                    <div class="c-info">
+                        <label class="required" for="username">Username</label>
+                        <input type="text" name="username" id="username" placeholder="Email"
+                            oninput="this.className='' " autocomplete="off">
+                    </div>
+                    <div class="c-info">
+                        <label class="required" for="password">Password</label>
+                        <input type="password" name="password" id="password" placeholder="password"
+                            oninput="this.className='' " autocomplete="off">
+                    </div>
 
-            <div class="c-info">
-              <label class="required" for="cpassword">Confirm Pasword</label>
-              <input
-                type="password"
-                name="cpassword"
-                id="cpassword"
-                oninput="this.className='' "
-                placeholder="Confirm password"
-                autocomplete="off"
-              />
+                    <div class="c-info">
+                        <label class="required" for="cpassword">Confirm Pasword</label>
+                        <input type="password" name="cpassword" id="cpassword" oninput="this.className='' "
+                            placeholder="Confirm password" autocomplete="off">
+                    </div>
+                    <div style="text-align: center;">
+                        <input type="submit" id="btn" value="Sign Up">
+                    </div>
+                </form>
+                <div class="link" style="text-align: center; margin-top: 20px;">
+                    <a style="text-decoration: none;" href="/">Login</a>
+                </div>
             </div>
-            <div style="text-align: center">
-              <input type="submit" id="btn" value="Sign Up" />
-            </div>
-          </form>
-          <div class="link" style="text-align: center; margin-top: 20px">
-            <a style="text-decoration: none" href="/">Login</a>
-          </div>
         </div>
-      </div>
     </div>
     <%- include('./partials/footer'); %>
-  </body>
-  <script src="./SignUp.js"></script>
+        <script src="/signup.js"></script>
+
 </html>
