--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -50,11 +50,6 @@
         onselect="this.className='' "
       >
         <option value="" selected>Country</option>
-        <option value="india">India</option>
-        <option value="bangladesh">Bangladesh</option>
-        <option value="nepal">Nepal</option>
-        <option value="russia">Russia</option>
-        <option value="sri-lanka">Sri Lanka</option>
       </select>
     </div>
 
@@ -67,11 +62,6 @@
         onselect="this.className='' "
       >
         <option value="" selected>State</option>
-        <option value="india">India</option>
-        <option value="bangladesh">Bangladesh</option>
-        <option value="nepal">Nepal</option>
-        <option value="russia">Russia</option>
-        <option value="sri-lanka">Sri Lanka</option>
       </select>
     </div>
   </div>
@@ -85,12 +75,7 @@
         style="margin-top: 6px"
         onselect="this.className='' "
       >
-        <option value="" selected>Country</option>
-        <option value="india">Ranchi</option>
-        <option value="bangladesh">Patna</option>
-        <option value="nepal">Mumbai</option>
-        <option value="russia">Delhi</option>
-        <option value="sri-lanka">Punjab</option>
+        <option value="" selected>City</option>
       </select>
     </div>
 
