user can delete your record

--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <h1 style="background-color: #37cd7a; padding: 20px">User Registration</h1>
     <div>
         <div class="form-container">
             <div id="sub-container">
